--- a/.github/workflows/build_singbox.yaml
+++ b/.github/workflows/build_singbox.yaml
@@ -33,7 +33,6 @@ concurrency:
 
 env:
   GO_VERSION: ^1.24.5
-  CHECKOUT_ACTION: actions/checkout@eef61447b9ff4aafe5dcd4e0bbf5d482be7e7871
 
 jobs:
   calculate_version:
@@ -43,7 +42,7 @@ jobs:
       version: ${{ steps.outputs.outputs.version }}
     steps:
       - name: Checkout
-        uses: ${{ env.CHECKOUT_ACTION }}
+        uses: actions/checkout@eef61447b9ff4aafe5dcd4e0bbf5d482be7e7871
         with:
           fetch-depth: 0
       - name: Setup Go
@@ -211,7 +210,7 @@ jobs:
       - calculate_version
     steps:
       - name: Checkout
-        uses: actions/checkout@eef61447b9ff4aafe5dcd4e0bbf5d482be7e7871 # v4
+        uses: actions/checkout@eef61447b9ff4aafe5dcd4e0bbf5d482be7e7871
         with:
           fetch-depth: 0
           submodules: 'recursive'
