--- a/.github/workflows/build_singbox.yaml
+++ b/.github/workflows/build_singbox.yaml
@@ -191,11 +191,14 @@ jobs:
           goarm: ${{ matrix.goarm || '' }}
           go386: ${{ matrix.go386 || '' }}
           gomips: ${{ matrix.gomips || '' }}
-          legacy_go: ${{ matrix.legacy_go || false }}
+          legacy_go: ${{ matrix.legacy_go || 'false' }}
           debian: ${{ matrix.debian || '' }}
           rpm: ${{ matrix.rpm || '' }}
           pacman: ${{ matrix.pacman || '' }}
           openwrt: ${{ matrix.openwrt || '' }}
+          gpg_key: ${{ secrets.GPG_KEY }}
+          gpg_passphrase: ${{ secrets.GPG_PASSPHRASE }}
+          gpg_key_id: ${{ secrets.GPG_KEY_ID }}
       - name: Setup rclone and config
         uses: ./.github/workflows/actions/setup_rclone
       - name: Upload to rclone
