--- a/.github/workflows/build_rclone.yml
+++ b/.github/workflows/build_rclone.yml
@@ -226,6 +226,8 @@ jobs:
           gpg_key_id: ${{ secrets.GPG_KEY_ID }}
       - name: Setup rclone and config
         uses: ./.github/workflows/actions/setup_rclone
+        with:
+          rclone_conf: ${{ secrets.RCLONE_CONF }}
       - name: Upload to rclone
         run: |
           rclone -v copy dist drive:github-releases/${{ inputs.binary_name }}/${{ needs.calculate_version.outputs.version }}
