--- a/.github/workflows/build_singbox.yaml
+++ b/.github/workflows/build_singbox.yaml
@@ -201,6 +201,8 @@ jobs:
           gpg_key_id: ${{ secrets.GPG_KEY_ID }}
       - name: Setup rclone and config
         uses: ./.github/workflows/actions/setup_rclone
+        with:
+          rclone_conf: ${{ secrets.RCLONE_CONF }}
       - name: Upload to rclone
         run: |
           rclone -v copy dist drive:github-releases/${{ inputs.binary_name }}/${{ needs.calculate_version.outputs.version }}
@@ -287,6 +289,8 @@ jobs:
           cp clients/android/app/build/outputs/apk/other/release/*-universal.apk dist
       - name: Setup rclone and config
         uses: ./.github/workflows/actions/setup_rclone
+        with:
+          rclone_conf: ${{ secrets.RCLONE_CONF }}
       - name: Upload to rclone
         run: |
           rclone -v copy dist drive:github-releases/${{ inputs.binary_name }}/${{ needs.calculate_version.outputs.version }}
