--- a/.github/workflows/build_singbox.yaml
+++ b/.github/workflows/build_singbox.yaml
@@ -43,7 +43,7 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  GO_VERSION: ^1.24.5
+  GO_VERSION: 1.24.6
 
 jobs:
   calculate_version:
@@ -327,6 +327,8 @@ jobs:
       - name: Build library
         run: |-
           set -xeuo pipefail
+          go install -v github.com/sagernet/gomobile/cmd/gomobile
+          go install -v github.com/sagernet/gomobile/cmd/gobind
           make lib_install
           export PATH="$PATH:$(go env GOPATH)/bin"
           go run ./cmd/internal/build_libbox -target apple -platform macos
